prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/unfinished_string.diag.txt
ERROR: unfinished string
testData/diagnostics/compilation_errors/lex_errors/unfinished_string.nut:2:8

// EXPECT_ERROR: "unfinished string"
let x = "hello
        ^-----


